Fixed client message systems test. Added 'schedule job' function to CMS